Rule Component/src/objects/Topic__c.object
<CustomObject>
    <description>This object will store all topic related information for an event. For all connected system, topic Ids will have to be mapped. 
Either all systems maintain the same Topic Id or there is a mapping object to map Topics across the system and is always in sync.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RestrictAutoContentCreation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LevelID__c</fullName>
        <label>LevelID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentTopic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>ENS_Topics</relationshipLabel>
        <relationshipName>ENS_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>This field signifies the scope for executing queuer batch class.</description>
        <label>Scope</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopicArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TopicAreaID</label>
        <referenceTo>Topic_Area__c</referenceTo>
        <relationshipLabel>ENS_Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ENS_Topic</label>
    <listViews>
        <fullName>Academic_Topic_Records</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>LevelID__c</columns>
        <columns>Name__c</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordType__c</columns>
        <columns>Scope__c</columns>
        <columns>TopicArea__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectName__c</field>
            <operation>equals</operation>
            <value>Academic_Record__c</value>
        </filters>
        <label>Academic Topic Records</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentTopic__c</columns>
        <columns>Description__c</columns>
        <columns>LevelID__c</columns>
        <columns>Name__c</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordType__c</columns>
        <columns>Scope__c</columns>
        <columns>TopicArea__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contact_Topic_Records</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>LevelID__c</columns>
        <columns>Name__c</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordType__c</columns>
        <columns>Scope__c</columns>
        <columns>TopicArea__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectName__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact Topic Records</label>
    </listViews>
    <listViews>
        <fullName>Stub_topics</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TopicArea__c</field>
            <operation>equals</operation>
            <value>Stub</value>
        </filters>
        <label>Stub topics</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Topic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ENS_Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>